# klondike-solitaire

./: .gitignore  CMakeLists.txt  README.md  build_debug_web.sh  build_web.sh  minshell.html  tatus
.cache/clangd/index/: Card.cpp.26D6655CCB0B7D93.idx  Card.h.5A33060A3CD0C84D.idx  Solitaire.cpp.4E8C1A0F0DF053BE.idx  Solitaire.h.7FD17926FC616BF5.idx  main.cpp.15DE422FA41956A6.idx
src/: Card.cpp  Card.h  Solitaire.cpp  Solitaire.h  main.cpp
